[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
name = "rustcraft"
version = "0.1.0"

[dependencies]
camera_controllers = "0.13.0"
gfx = "0.10"
gfx_device_gl = "0.9.0"
image = "0.9.0"
nalgebra = "0.8.1"
ncollide = "0.8.0"
piston_window = "0.44.0"
pistoncore-sdl2_window = "0.29.0"
shader_version = "0.2.1"
vecmath = "0.2.0"
